<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Money Manager Version 2</string>
    <string name="app_name_without_version">Money Manager</string>

    <!-- Commons -->
    <string name="category">Add Category</string>
    <string name="name">Name</string>

    <!-- Dialog Factory -->
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_error_title">Sorry</string>

    <!-- Login Activity -->
    <string name="error_invalid_username">Username cannot be empty</string>
    <string name="error_invalid_password">Password cannot be empty</string>
    <string name="error_invalid_email">Email cannot be empty</string>
    <string name="error_not_equal_email_and_confirm">Is not equals to email!</string>
    <string name="error_is_not_valid_email">Is not a valid email!</string>
    <string name="error_invalid_name">Name cannot be empty</string>
    <string name="error_invalid_initial">Initial money cannot be empty</string>
    <string name="login_your_name">Username</string>
    <string name="login_init_money">Initial Money</string>
    <string-array name="currency">
        <item>EUR</item>
        <item>USD</item>
        <item>GBP</item>
        <item>INR</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>SGD</item>
        <item>CHF</item>
        <item>MYR</item>
        <item>JPY</item>
        <item>CNY</item>
    </string-array>
    <string name="sync_desc">Do you want to sync your data automatically to server?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter">Enter</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create_account">Create an account</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="loading">Loading…</string>
    <string name="cant_open">Cannot open the file.\nDo you want to remove the attachment?</string>
    <string name="cant_create">Cannot create the file.</string>
    <string name="cant_create_reason">Cannot create the file.\nReason: %1$s</string>


    <!-- Main Activity -->
    <string name="balance">Balance</string>
    <string name="euro">EUR</string>
    <string name="balance_default_value">0</string>
    <string name="balance_value">%1$.2f</string>
    <string name="empty_list">The list is empty.</string>
    <string name="date">Date</string>
    <string name="minus">-</string>
    <string-array name="transaction_spinner_value">
        <item>Total</item>
        <item>Daily</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_month">This Month</string>
    <string name="this_year">This Year</string>
    <string name="next_month">Next Month</string>
    <string name="next_year">Next Year</string>
    <string name="pre_month">Last Month</string>
    <string name="pre_year">Last Year</string>
    <string name="setDate">%1$d/%2$d/%3$d</string>
    <string name="error_delete_transactions">Cannot delete transactions…</string>
    <string name="select_all">Select all</string>


    <!-- main_listviews-->
    <string name="delete_image_view_desc">Delete an item</string>

    <!-- CardView Transaction -->
    <string name="balance_value_positive">+ %1$.2f</string>
    <string name="balance_value_negative">- %1$.2f</string>

    <!-- CardView Category -->
    <string name="add_new_category">Add</string>

    <!-- Popup Menu Select Pictures-->
    <string name="take_new_picture">Take a new picture</string>
    <string name="choose_gallery">Choose from Gallery</string>
    <string name="welcome">WELCOME</string>

</resources>