<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" >
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:hint="@string/login_your_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/initial_input_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp">
        <EditText
            android:id="@+id/etInitialMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/login_init_money"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinner_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:entries="@array/currency" />

    <Button
        android:id="@+id/enterBtn"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_btn_blue"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:fontFamily="sans-serif" />

</LinearLayout>
